--- a/index.html
+++ b/index.html
@@ -1,1 +1,216 @@
-Hello World
+<!DOCTYPE html>
+<!-- saved from url=(0099)https://htmlpreview.github.io/?https://raw.githubusercontent.com/fjkz/web_resume/master/resume.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><!--<base href="https://raw.githubusercontent.com/fjkz/web_resume/master/resume.html">--><base href=".">
+    
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Yohei Okaya">
+
+    <title>Yohei Okaya - Resume</title>
+
+    <link rel="stylesheet" href="./css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+
+    <style type="text/css">
+      h1 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
+        font-size: 36pt;
+        text-align: center;
+      }
+      h5 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
+      }
+      address {
+        text-align: center;
+      }
+      ul {
+        padding-left: 30px;
+      }
+      .container {
+        width: 210mm; /* A4 */
+        padding: 15mm;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-size: 12pt;
+        text-align: center;
+      }
+      .page-header {
+          border-bottom-color: #000000;
+      }
+      .row {
+        text-align: justify;
+        margin-top: 0px;
+        margin-bottom: 12px;
+      }
+      .date {
+        text-align: left;
+        font-size: smaller;
+      }
+      /* Force to dl one line for printing. */
+      .dl-horizontal dt {
+        float: left;
+        width: 160px;
+        overflow: visible;
+        clear: left;
+        text-align: left;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        font-weight: normal;
+        font-style: italic;
+      }
+      .dl-horizontal dd {
+        margin-left: 180px;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="container">
+
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="page-header">
+            <h1>Yohei Okaya</h1>
+          </div>
+
+          <address>
+            <ul class="list-inline">
+              <li>E-mail: yohei@yoheiokaya.com</li>
+              <li>Twitter: https://twitter.com/akehoyayoi</li>
+              <li>Facebook: https://www.facebook.com/yohei.okaya</li>
+              <li>LinkedIn: https://www.linkedin.com/in/yohei-okaya-55461530</li>
+              <li>Qiita: https://qiita.com/akehoyayoi</li>
+            </ul>
+          </address>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-2">
+          <h5>OBJECTIVE</h5>
+        </div>
+        <div class="col-xs-10">
+          A Software Engineer in the field of Mobile Game development, New Business development.
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-2">
+          <h5>TECHNICAL SKILLS</h5>
+        </div>
+        <div class="col-xs-10">
+          <dl class="dl-horizontal">
+            <dt>Programming Languages:</dt>
+            <dd>C/C++, Java/Scala, Ruby/Python, Javascript/Typescript, swift/kotlin, UNIX shell script, C#/VB</dd>
+            <dt>Development Tools:</dt>
+            <dd>Xcode/IntelliJ/VisualStudio, Git/Subversion/VSS, Sbt/Maven/Gradle, CppUnit/JUnit/Specs2/RSpec, Jenkins/TravisCI/CircleCI, AWS/Azure/IBMCloud, Docker/Kubernetes</dd>
+          </dl>
+          Specialized in
+          <ul>
+            <li>Construct Infrastructures by various Cloud vendor,</li>
+            <li>Develop Mobile Game by cocos2d-x, </li>
+            <li>Develop Web API by Scala.</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-2">
+          <h5>EXPERIENCE</h5>
+        </div>
+        <div class="col-xs-10">
+          <div class="row">
+            <div class="col-xs-10">
+              <i>Consultant</i><br>
+              IBM Japan, Ltd.
+            </div>
+            <div class="col-xs-2">
+              <div class="date">November. 2017 to Present</div>
+            </div>
+          </div>
+          <p>
+            I conducted project management support mainly in the manufacturing industry.
+          </p>
+        </div>
+        <div class="col-xs-10">
+            <div class="row">
+              <div class="col-xs-10">
+                <i>Engineer</i><br>
+                JapanTaxi Co.,Ltd.
+              </div>
+              <div class="col-xs-2">
+                <div class="date">August. 2015 to October. 2017</div>
+              </div>
+            </div>
+            <p>
+              I implemented a large-scale replacement of dispatch applications.
+            </p>
+            <p>  
+              I am familiar with multi-system collaboration at taxi company.
+            </p>
+          </div>
+          <div class="col-xs-10">
+              <div class="row">
+                <div class="col-xs-10">
+                  <i>Engineer</i><br>
+                  Geisha Tokyo Inc.
+                </div>
+                <div class="col-xs-2">
+                  <div class="date">July. 2010 to July. 2015</div>
+                </div>
+              </div>
+              <p>
+                I planned the new mobile games, created PoC, commercialized and operated it.
+              </p>
+            </div>
+            <div class="col-xs-10">
+                <div class="row">
+                  <div class="col-xs-10">
+                    <i>Engineer</i><br>
+                    Accenture Japan Ltd.
+                  </div>
+                  <div class="col-xs-2">
+                    <div class="date">October. 2007 to June. 2010</div>
+                  </div>
+                </div>
+                <p>
+                  I developed and operated a system of apparel company and life insurance company.
+                </p>
+              </div>
+              <div class="col-xs-10">
+                  <div class="row">
+                    <div class="col-xs-10">
+                      <i>Engineer</i><br>
+                      Denso Create Inc.
+                    </div>
+                    <div class="col-xs-2">
+                      <div class="date">April. 2005 to September. 2007</div>
+                    </div>
+                  </div>
+                  <p>
+                    I did car navigation development, tool development, framework development.
+                  </p>
+                </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-2">
+          <h5>EDUCATION</h5>
+        </div>
+        <div class="col-xs-10">
+          <div class="row">
+            <div class="col-xs-10">
+              <i>Bachelor of Engineering,</i> Computer Science/Reinforcement Learning<br>
+              Gifu University, Japan
+            </div>
+            <div class="col-xs-2">
+              <div class="date">Mar. 2005</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!-- /.container -->
+
+  <script src="./css/htmlpreview.min.js"></script><script>HTMLPreview.replaceAssets();</script>
+</body></html>
