--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
         </div>
         <div class="col-xs-10">
           <dl class="dl-horizontal">
-            <dt>Programming Languages:</dt>
+            <dt>Programming Languages:</dt><br/>
             <dd>C/C++, Java/Scala, Ruby/Python, Javascript/Typescript, swift/kotlin, UNIX shell script, C#/VB</dd>
-            <dt>Development Tools:</dt>
+            <dt>Development Tools:</dt><br/>
             <dd>Xcode/IntelliJ/VisualStudio, Git/Subversion/VSS, Sbt/Maven/Gradle, CppUnit/JUnit/Specs2/RSpec, Jenkins/TravisCI/CircleCI, AWS/Azure/IBMCloud, Docker/Kubernetes</dd>
           </dl>
           Specialized in
