--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <ul>
             <li>Construct Infrastructures by various Cloud vendor,</li>
             <li>Develop Mobile Game by cocos2d-x, </li>
-            <li>Develop Web API by Scala.</li>
+            <li>Develop Web API by Scala(Playframework/Akka).</li>
           </ul>
         </div>
       </div>
