--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <dt>Programming Languages:</dt><br/>
             <dd>C/C++, Java/Scala, Ruby/Python, Javascript/Typescript, swift/kotlin, UNIX shell script, C#/VB</dd>
             <dt>Development Tools:</dt><br/>
-            <dd>Xcode/IntelliJ/VisualStudio, Git/Subversion/VSS, Sbt/Maven/Gradle, CppUnit/JUnit/Specs2/RSpec, Jenkins/TravisCI/CircleCI, AWS/Azure/IBMCloud, Docker/Kubernetes</dd>
+            <dd>Xcode/IntelliJ/VisualStudio, Git/Subversion/VSS, Sbt/Maven/Gradle, CppUnit/JUnit/Specs2/RSpec, Jenkins/TravisCI/CircleCI/GithubActions, AWS/Azure/IBMCloud, Docker/Kubernetes</dd>
           </dl>
           Specialized in
           <ul>
@@ -122,6 +122,20 @@
         <div class="col-xs-10">
           <div class="row">
             <div class="col-xs-10">
+              <i>Engineer</i><br>
+              SoftBank Corp.
+              <p>
+                I did hardware device QA engineering and field engineering. 
+                Recently I'm developing streaming system mainly.(Fintech & Akka stream)
+              </p>
+            </div>
+            <div class="col-xs-2">
+              <div class="date">January. 2019 to Present</div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs-10">
               <i>Consultant</i><br>
               IBM Japan, Ltd.
               <p>
@@ -129,7 +143,7 @@
               </p>
             </div>
             <div class="col-xs-2">
-              <div class="date">November. 2017 to Present</div>
+              <div class="date">November. 2017 to December. 2018</div>
             </div>
           </div>
 
