--- a/index.html
+++ b/index.html
@@ -122,24 +122,51 @@
         <div class="col-xs-10">
           <div class="row">
             <div class="col-xs-10">
-              <i>Engineer</i><br>
-              SoftBank Corp.
+              <i>Tech Lead</i><br>
+              SoftBank Corp.(PayPay)
               <p>
-                I did hardware device QA engineering and field engineering. 
-                Recently I'm developing streaming system mainly.(Fintech & Akka stream)
+                I'm managing the team that is developping the system for merchant.
+              </p>
+              <p>  
+                Mainly spring boot, sometimes script like Python.
+              </p>
+              <p>  
+                Current main works are the team management and architecture design.
+              </p>
+              <p>  
+                Before be a tech lead, developped akka system for applying campaign.
               </p>
             </div>
             <div class="col-xs-2">
-              <div class="date">January. 2019 to Present</div>
+              <div class="date">June. 2019 to Present</div>
             </div>
           </div>
 
           <div class="row">
             <div class="col-xs-10">
-              <i>Consultant</i><br>
+              <i>Product Manager</i><br>
+              SoftBank Corp.(DiDi Mobility Japan)
+              <p>
+                Lead of QA engineering for hardware device.(Between android and bluetooth)
+              </p>
+              <p>  
+                Organize requirement and support up to production.
+              </p>
+            </div>
+            <div class="col-xs-2">
+              <div class="date">January. 2019 to May. 2019</div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs-10">
+              <i>Senior Consultant</i><br>
               IBM Japan, Ltd.
               <p>
                 I conducted project management support mainly in the manufacturing industry.
+              </p>
+              <p>  
+                And proposed a system using blockchain.
               </p>
             </div>
             <div class="col-xs-2">
@@ -149,7 +176,7 @@
 
           <div class="row">
             <div class="col-xs-10">
-              <i>Engineer</i><br>
+              <i>Producer - Engineer</i><br>
               JapanTaxi Co.,Ltd.
               <p>
                 I implemented a large-scale replacement of dispatch applications.
