--- a/index.html
+++ b/index.html
@@ -169,8 +169,10 @@
               <i>Producer - Engineer</i><br>
               JapanTaxi Co.,Ltd.
               <p>
-                I implemented a large-scale replacement of dispatch applications.
+                I lead a large-scale replacement of dispatch applications.
                 I am familiar with multi-system collaboration at taxi company.
+                Mainly Ruby on rails, sometimes C#.
+                And started the advertice system in taxi, developed android application. 
               </p>
             </div>
             <div class="col-xs-2">
