Add some experience

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
               <li>Facebook: https://www.facebook.com/yohei.okaya</li>
               <li>LinkedIn: https://www.linkedin.com/in/yohei-okaya-55461530</li>
               <li>Qiita: https://qiita.com/akehoyayoi</li>
+              <li>Github: https://github.com/akehoyayoi</li>
             </ul>
           </address>
         </div>
@@ -91,7 +92,7 @@
           <h5>OBJECTIVE</h5>
         </div>
         <div class="col-xs-10">
-          A Software Engineer in the field of Mobile Game development, New Business development.
+          The software engineer lead that can drive team with new business development.
         </div>
       </div>
 
@@ -104,7 +105,7 @@
             <dt>Programming Languages:</dt><br/>
             <dd>C/C++, Java/Scala, Ruby/Python, Javascript/Typescript, swift/kotlin, UNIX shell script, C#/VB</dd>
             <dt>Development Tools:</dt><br/>
-            <dd>Xcode/IntelliJ/VisualStudio, Git/Subversion/VSS, Sbt/Maven/Gradle, CppUnit/JUnit/Specs2/RSpec, Jenkins/TravisCI/CircleCI/GithubActions, AWS/Azure/IBMCloud, Docker/Kubernetes</dd>
+            <dd>Xcode/IntelliJ/VisualStudio, Git/Subversion/VSS, Sbt/Maven/Gradle, CppUnit/JUnit/Specs2/RSpec, Jenkins/TravisCI/CircleCI/GithubActions, MySQL/SQLServer/Oracle, memcached/redis, AWS/Azure/IBMCloud, Docker/Kubernetes, playframework/akka/chalice/spring boot, React/Angular/Vue</dd>
           </dl>
           Specialized in
           <ul>
@@ -127,6 +128,7 @@
               <p>
                 I'm managing the team that is developping the system for merchant.
                 Mainly spring boot, sometimes script like Python.
+                These applications are running ON k8s cluster.
                 Current main works are the team management and architecture design.
                 Before be a tech lead, developped akka system for applying campaign.
               </p>
@@ -170,8 +172,8 @@
               JapanTaxi Co.,Ltd.
               <p>
                 I lead a large-scale replacement of dispatch applications.
+                Existing application is written by VB, I replaced new architecture to RoR and C# on Azure.
                 I am familiar with multi-system collaboration at taxi company.
-                Mainly Ruby on rails, sometimes C#.
                 And started the advertice system in taxi, developed android application. 
               </p>
             </div>
@@ -182,9 +184,10 @@
           <div class="row">
             <div class="col-xs-10">
               <i>Engineer</i><br>
-              Geisha Tokyo Inc.
+              Geisha Tokyo Entertainment Inc.
               <p>
-                I planned the new mobile games, created PoC, commercialized and operated it.
+                I joined to a new mobile game project from the beginning, then, lead the project until production rollout as backend lead developer.
+                The application was comprised from Android/iOS application and backend API written in Scala/Playframework running on AWS/EC2.
               </p>
             </div>
             <div class="col-xs-2">
@@ -229,7 +232,7 @@
               Gifu University, Japan
             </div>
             <div class="col-xs-2">
-              <div class="date">Mar. 2005</div>
+              <div class="date">March. 2005</div>
             </div>
           </div>
         </div>
