--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <dl class="dl-horizontal">
             <dt>Programming Languages:</dt><br/>
             <dd>C/C++, Java/Scala, Ruby/Python, Javascript/Typescript, swift/kotlin, UNIX shell script, C#/VB</dd>
-            <dt>Development Tools:</dt><br/>
+            <dt>Development Tools/Middlewares:</dt><br/>
             <dd>Xcode/IntelliJ/VisualStudio, Git/Subversion/VSS, Sbt/Maven/Gradle, CppUnit/JUnit/Specs2/RSpec, Jenkins/TravisCI/CircleCI/GithubActions, MySQL/SQLServer/Oracle, memcached/redis, AWS/Azure/IBMCloud, Docker/Kubernetes, playframework/akka/chalice/spring boot, React/Angular/Vue</dd>
           </dl>
           Specialized in
